Implement saved requests API
