# app/schemas/main.py
@@ -166,6 +166,10 @@ class RequestListResponse(ContractModel):
     origin: ListOrigin
 
 
+class SavedRequestListResponse(ContractModel):
+    items: list[RequestResponse]
+
+
 class RequestUpdateInput(ContractModel):
     title: str | None = Field(None, min_length=1, max_length=100)
     description: str | None = Field(None, min_length=1, max_length=2000)
